fix to icons z-index, as links were buggy because they were not top most element

--- a/src/components/SocialMediaIcons/SocialMediaIcons.css
+++ b/src/components/SocialMediaIcons/SocialMediaIcons.css
@@ -1,5 +1,7 @@
 .social-media-icons {
     text-align: center;
+    position: relative;
+    z-index: 1000;
 }
 
 .social-media-icons .social-svg {
